--- a/anag_stats_/experiment.html
+++ b/anag_stats_/experiment.html
@@ -20,11 +20,12 @@
     <script src="./util.js" type="text/javascript"></script>
     <script src="./experiment/anagramer/jspysch/core_js/plugin-gram.js" type="text/javascript"></script>
     <script src="./experiment.js" type="text/javascript"></script>
-    
-    <!-- Load anagramer content-->
-    <script src="./anagram-instructions.js" type="text/javascript"></script>
-    <script src="./anagram-grouping.js" type="text/javascript"></script>
-    
+    <script src="./stimuli.js" type="text/javascript"></script>
+    <script src="./experiment/anagramer/stimuli/consent.html " type =""></script>
+    <script src="./experiment/anagramer/stimuli/instructions.html" type =""></script>
+    <script src="./experiment/anagramer/stimuli/feedback.html" type =""></script>
+    <script src="./experiment/anagramer/stimuli/exit.html" type =""></script>
+
     <!--Proliferate integrations -->
     <!-- <script src='https://proliferate.alps.science/static/js/proliferate.js'></script> -->
   </head>
