modified:   README.md 	modified:   anag_stats_/experiment/anagramer/.DS_Store 	modified:   anag_stats_/experiment/anagramer/stimuli/instructions.html

--- a/anag_stats_/experiment/anagramer/stimuli/instructions.html
+++ b/anag_stats_/experiment/anagramer/stimuli/instructions.html
@@ -1,11 +1,7 @@
 <!--The Instructions form content file for Anagrammer. Lynde Folsom -->
-<div id="consent">
+<div id="instructions">
     <p>
-      The cosent form stuff here
-    </p>
-    <p>
-      <input type="checkbox" id="consent_checkbox" />
-      I agree to take part in this study.
+      Instruction stuff here
     </p>
     <button type="button" id="start">Start Experiment</button>
   </div>
