--- a/anag_stats_/experiment.html
+++ b/anag_stats_/experiment.html
@@ -19,8 +19,8 @@
     <!-- Load custom plugins -->
     <script src="./util.js" type="text/javascript"></script>
     <script src="./experiment/anagramer/jspysch/core_js/plugin-gram.js" type="text/javascript"></script>
+    <script src="./stimuli.js"></script>
     <script src="./experiment.js" type="text/javascript"></script>
-    <script src="./stimuli.js" type="text/javascript"></script>
     <script src="./experiment/anagramer/stimuli/consent.html " type =""></script>
     <script src="./experiment/anagramer/stimuli/instructions.html" type =""></script>
     <script src="./experiment/anagramer/stimuli/feedback.html" type =""></script>
