modified:   anag_stats_/experiment.html 	modified:   anag_stats_/experiment.js 	modified:   anag_stats_/experiment/anagramer/stimuli/consent.html 	modified:   anag_stats_/experiment/anagramer/stimuli/debrief.html 	modified:   anag_stats_/experiment/anagramer/stimuli/feedback.html 	modified:   anag_stats_/experiment/anagramer/stimuli/instructions.html

--- a/anag_stats_/experiment/anagramer/stimuli/debrief.html
+++ b/anag_stats_/experiment/anagramer/stimuli/debrief.html
@@ -1,5 +1,12 @@
 <!--The debrief form content file for Anagrammer. Lynde Folsom -->
-
+<!DOCTYPE html>
+<html>
+<head>
+  <!-- Meta data and CSS/JS includes can go here -->
+  <title>Anagram_Stats</title>
+  <!-- CSS files-->
+  <link rel="stylesheet" href="./experiment/anagramer/experiment.css" type="text/css">
+</head>
 <div id="debrief">
     <p>
       Thank you for participating in this study. 
