--- a/anag_stats_/experiment/anagramer/stimuli/instructions.html
+++ b/anag_stats_/experiment/anagramer/stimuli/instructions.html
@@ -1,7 +1,7 @@
 <!--The Instructions form content file for Anagrammer. Lynde Folsom -->
 <div id="instructions">
     <p>
-      Instruction stuff here
+      Instruction stuff here.
     </p>
     <button type="button" id="start">Start Experiment</button>
   </div>
