--- a/anag_stats_/experiment.html
+++ b/anag_stats_/experiment.html
@@ -9,10 +9,11 @@
     <!-- Core JSpsych-->
     <script src="./experiment/anagramer/jspysch/core_js/jspsych.js"> </script> 
     <!-- JSpych stylesheets-->
-    <link rel="stylesheet" href="./experiment/anagramer/jspysch/css/jspsych.css" type="text/css">
+    <link rel="stylesheet" href="./experiment/anagramer/jspysch/core_js/jspsych.css" type="text/css">
     <!-- Initialize jsPsych plugins -->
     <script src="./experiment/anagramer/jspysch/core_js/plugin-fullscreen.js"></script>
     <script src="./experiment/anagramer/jspysch/core_js/plugin-html-button-response.js"></script>
+    <script src="./experiment/anagramer/jspysch/core_js/plugin-instructions.js"></script>
     <script src="./experiment/anagramer/jspysch/core_js/plugin-external-html.js"></script>
     <script src="./experiment/anagramer/jspysch/core_js/plugin-html-keyboard-response.js"></script>
     <script src="./experiment/anagramer/jspysch/core_js/plugin-call-function.js"></script>
@@ -21,10 +22,10 @@
     <script src="./util.js" type="text/javascript"></script>
     <script src="./experiment/anagramer/jspysch/core_js/plugin-gram.js" type="text/javascript"></script>
     <script src="./experiment.js" type="text/javascript"></script>
-    <script src="./experiment/anagramer/stimuli/consent.html " type =""></script>
-    <script src="./experiment/anagramer/stimuli/instructions.html" type =""></script>
-    <script src="./experiment/anagramer/stimuli/debrief.html" type =""></script>
-    <!--Proliferate integrations -->
+    <!-- <script src="./experiment/anagramer/stimuli/consent.js " type =""></script> -->
+    <!-- <script src="./experiment/anagramer/stimuli/instructions.js" type =""></script>-->
+    <!-- <script src="./experiment/anagramer/stimuli/debrief.js" type =""></script>-->
+    <!-- Proliferate integrations -->
     <!-- <script src='https://proliferate.alps.science/static/js/proliferate.js'></script> -->
   </head>
 <body></body>
